Maybe fixed individual

--- a/presentation.html
+++ b/presentation.html
@@ -217,8 +217,8 @@ predictions</code></pre>
 ## Levels: A B C D E</code></pre>
 <p>When I submitted the files with these classifications, all of them were correct.</p>
 </div>
-<div id="indivual-trees" class="section level2">
-<h2>Indivual trees</h2>
+<div id="individual-trees" class="section level2">
+<h2>Individual trees</h2>
 <p>We can try to look at an individual tree from the forest.</p>
 <pre class="r"><code>tree1 &lt;- getTree(modFit$finalModel,k=1,labelVar=T)
 dim(tree1)</code></pre>
